# proto_example

./: MODULE.bazel  OPTIONS
src/: BUILD.bazel  foo.proto  foo_grpc_test.go  foo_proto_test.go
